@@ -25,6 +25,7 @@ This release includes the following bugfixes:
  o GnuTLS-based multi interface doing HTTPS over proxy failed
  o recv() failures cause CURLE_RECV_ERROR
  o SFTP over SOCKS crash fixed
+ o thread-safety issues addressed for NSS-powered libcurls
 
 This release includes the following known bugs:
 
@@ -39,6 +40,6 @@ advice from friends like these:
 
  Keith Mok, Yang Tse, Daniel Fandrich, Guenter Knauf, Dmitriy Sergeyev,
  Linus Nielsen Feltzing, Martin Drasar, Stefan Krause, Dmitry Kurochkin,
- Mike Revi, Andres Garcia, Michael Goffioul, Markus Moeller
+ Mike Revi, Andres Garcia, Michael Goffioul, Markus Moeller, Rob Crittenden
 
         Thanks! (and sorry if I forgot to mention someone)
